# ComfyUI-IF_AI_HFDownloaderNode

./: IFHFDownloadNode.py  README.md  __init__.py  pyproject.toml  requirements.txt
web/js/: IFHFDownload.css  IFHFDownloadNode.js
workflow/: IF_HF_downloader.json
workflows/: HF_downloader_wf.json
