[project]
name = "comfyui-if_ai_hfdownloadernode"
description = "Downloads repos/spaces and individual files from HuggingFace"
version = "1.0.2"
license = { file = "LICENSE.txt" } 
dependencies = ["huggingface_hub", "python-dotenv", "aiohttp", "tqm"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI_IF_AI_HFdownloader"
Icon = ""
