[project]
name = "comfyui-if_ai_hfdownloadernode"
description = "Downloads repos/spaces and individual files from HuggingFace"
version = "1.0.4"
license = { file = "MIT License" }
dependencies = ["huggingface_hub", "python-dotenv", "aiohttp", "tqm"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "IF_HuggingFace_downloader"
Icon = ""
